Aplica parte das alterações recomendadas pela análise estática